--- a/media/css/firefox/new/scene2.less
+++ b/media/css/firefox/new/scene2.less
@@ -39,8 +39,8 @@
 
 .js .help {
     display: block;
-    padding: 0 190px;
-    margin-bottom: @baseLine * 2;
+    max-width: 40em;
+    margin: 0 auto (@baseLine * 2);
     text-align: center;
 }
 
