--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -15,7 +15,7 @@
 {% block body_class %}firefox-android{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-android-optimizely') %}
+  {% if switch('firefox-android-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
