--- a/bedrock/firefox/templates/firefox/dev-firstrun.html
+++ b/bedrock/firefox/templates/firefox/dev-firstrun.html
@@ -62,7 +62,7 @@ data-sync-reminder-text="{{ _('If you continue without syncing your new Develope
       <p>{{_('Get to know the features that make it the most complete browser for building the Web.')}}</p>
     </header>
     <ul class="features">
-    {% if l10n_has_tag('firefox_dev_fall') and waffle.switch('firefox-dev-fall') %}
+    {% if l10n_has_tag('firefox_dev_fall') and switch('firefox-dev-fall') %}
       <li class="feature">
         <a href="https://hacks.mozilla.org/2015/11/developer-edition-44-creative-tools-and-more" rel="external">
           {{ high_res_img('firefox/firstrun/dev/creative-tools.png', {'alt': 'Screenshot', 'width': '300', 'height': '160', 'class': 'screenshot'}) }}
@@ -134,7 +134,7 @@ data-sync-reminder-text="{{ _('If you continue without syncing your new Develope
             <div class="video" data-video-id="R_qDaLQ8ghg"></div>
           </div>
         </li>
-        {% if l10n_has_tag('firefox_dev_fall') and waffle.switch('firefox-dev-fall') %}
+        {% if l10n_has_tag('firefox_dev_fall') and switch('firefox-dev-fall') %}
         <li class="feature">
           <a href="https://developer.mozilla.org/docs/Tools/Performance" rel="external">
             <img src="{{ static('img/firefox/firstrun/dev/performance-tools.png') }}" alt="{{ _('Screenshot') }}" class="screenshot">
