--- a/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
+++ b/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
@@ -26,7 +26,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-firstrun-learnmore-optimizely') %}
+  {% if switch('firefox-firstrun-learnmore-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
