--- a/bedrock/firefox/templates/firefox/onboarding/onboarding-base.html
+++ b/bedrock/firefox/templates/firefox/onboarding/onboarding-base.html
@@ -30,7 +30,7 @@
 {% block body_class %}{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-onboarding-optimizely') %}
+  {% if switch('firefox-onboarding-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
