--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-sync') %}
+  {% if switch('firefox-sync') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
