--- a/bedrock/firefox/templates/firefox/australis/fx36/tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/tour.html
@@ -24,7 +24,7 @@
 {% block page_og_url %}{{ url('firefox') }}{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-tour-optimizely') %}
+  {% if switch('firefox-tour-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
