--- a/bedrock/firefox/templates/firefox/desktop/desktop-base.html
+++ b/bedrock/firefox/templates/firefox/desktop/desktop-base.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-desktop-optimizely') %}
+  {% if switch('firefox-desktop-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
