--- a/bedrock/firefox/templates/firefox/firstrun/firstrun-horizon.html
+++ b/bedrock/firefox/templates/firefox/firstrun/firstrun-horizon.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-firstrun-optimizely') %}
+  {% if switch('firefox-firstrun-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
