--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-hello-optimizely') %}
+  {% if switch('firefox-hello-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
