--- a/bedrock/firefox/templates/firefox/installer-help.html
+++ b/bedrock/firefox/templates/firefox/installer-help.html
@@ -10,7 +10,7 @@
 {% block body_id %}installer-help{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-installer-help-optimizely') %}
+  {% if switch('firefox-installer-help-optimizely') %}
      {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
