--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -27,7 +27,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-releasenotes-optimizely') %}
+  {% if switch('firefox-releasenotes-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
