--- a/bedrock/firefox/templates/firefox/win10-welcome.html
+++ b/bedrock/firefox/templates/firefox/win10-welcome.html
@@ -20,7 +20,7 @@
 {% block page_og_url %}{{ url('firefox') }}{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-win10-optimizely') %}
+  {% if switch('firefox-win10-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
