--- a/bedrock/mozorg/templates/mozorg/contribute/signup.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/signup.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('contribute-signup-optimizely') %}
+  {% if switch('contribute-signup-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
