--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -36,7 +36,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('mozorg-home-optimizely') %}
+  {% if switch('mozorg-home-optimizely') %}
      {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
