--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -34,7 +34,7 @@
 {% block body_class %}sky{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('plugincheck-optimizely') %}
+  {% if switch('plugincheck-optimizely') %}
      {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
