[fix bug 1287876] Unhide panels on home prototype B.
- Update survey URL
- Add scroll tracking

--- a/bedrock/mozorg/templates/mozorg/home/home-b.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-b.html
@@ -86,18 +86,7 @@
   <section class="section" id="who-innovate-wrapper">
     <section class="slider-wrapper" id="who">
       <div class="slider-cover">
-        <div class="slider-content">
-          <p class="slider-intro">
-            {{ _('We are a global network of educators, builders, experts and advocates.') }}
-          </p>
-
-          <div class="toggle-content">
-            <div class="toggle-buttons">
-              <button class="toggle-open toggle-who">{{ _('Our impact') }}</button>
-              <button class="toggle-close toggle-who"><span>{{ _('Close') }}</span></button>
-            </div>
-          </div>
-        </div>
+        <div class="slider-content">{# refactored to only contain background image #}</div>
       </div>
 
       <div class="slider-detail">
@@ -122,18 +111,7 @@
 
     <section class="slider-wrapper" id="innovate">
       <div class="slider-cover">
-        <div class="slider-content">
-          <p class="slider-intro">
-            {{ _('We build web technologies designed to excite, inspire and promote openness.') }}
-          </p>
-
-          <div class="toggle-content">
-            <div class="toggle-buttons">
-              <button class="toggle-open toggle-innovate">{{ _('Our innovations') }}</button>
-              <button class="toggle-close toggle-innovate"><span>{{ _('Close') }}</span></button>
-            </div>
-          </div>
-        </div>
+        <div class="slider-content">{# refactored to only contain background image #}</div>
       </div>
 
       <div class="slider-detail">
