--- a/media/css/mozorg/home/home-b.less
+++ b/media/css/mozorg/home/home-b.less
@@ -522,16 +522,11 @@ main {
 }
 
 .slider-cover .slider-content {
-    padding-top: 270px;
+    padding-top: 250px;
 }
 
 .slider-detail-headline {
     margin-bottom: 20px;
-}
-
-// button to hide/show content should be hidden w/out JS
-.toggle-content {
-    display: none;
 }
 
 #who {
@@ -570,21 +565,10 @@ main {
     }
 }
 
-// float layout for older browsers
+// float layout for wider viewports
 @media @mq-tablet {
     #who-innovate-wrapper {
         .clearfix;
-    }
-
-    // common styles for opaque, sketchy bg image
-    .slider-detail:after {
-        bottom: 0;
-        content: '';
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: -1;
     }
 
     #who {
@@ -595,317 +579,6 @@ main {
     #innovate {
         float: right;
         width: 50%;
-    }
-}
-
-// flexbox layout for savvy browsers that are tablet or wider
-@supports (display: flex) {
-    @media @mq-tablet {
-        #who-innovate-wrapper {
-            .align-items(stretch);
-            .flexbox;
-        }
-
-        #innovate,
-        #who {
-            .flex(1 1 50%);
-            .flex-direction(column);
-            .flexbox;
-            .justify-content(stretch);
-            float: none;
-        }
-
-        .slider-cover,
-        .slider-detail {
-            .flex;
-            height: @sliderHeight;
-        }
-
-        .slider-cover {
-            .align-items(center);
-            .flex-direction(column);
-            .flexbox;
-            .justify-content(center);
-
-            .slider-content p {
-                .font-size(20px);
-            }
-        }
-
-        .slider-detail {
-            min-height: 0;
-        }
-
-        // if JS available, set up fancy slider interactions
-        .js {
-            .toggle-content {
-                display: block;
-                height: 44px;
-                overflow: hidden;
-            }
-
-            .toggle-buttons {
-                transition: transform 0.25s ease;
-            }
-
-            .toggle-close,
-            .toggle-open {
-                background: transparent;
-                border: none;
-                cursor: pointer;
-                display: block;
-                height: 40px;
-                outline: none;
-            }
-
-            .toggle-open {
-                .fira-sans;
-                .font-size(26px);
-                font-weight: bold;
-                height: 40px;
-                margin: 0 auto 4px;
-                text-decoration: underline;
-                white-space: nowrap;
-            }
-
-            .toggle-close {
-                background: url('/media/img/home/new/b/svg-sprite.svg');
-                cursor: pointer;
-                height: 44px;
-                margin: 0 auto;
-                overflow: hidden;
-                transition: transform 0.2s ease;
-                width: 44px;
-
-                span {
-                    visibility: hidden;
-                }
-            }
-
-            .icon-links {
-                width: 50%;
-
-                li {
-                    margin-bottom: 12px;
-                }
-            }
-
-            // update icons to alternate color
-            #encryption a {
-                .icon-link(43px, -229px);
-            }
-
-            #teachtheweb a {
-                .icon-link(32px, -272px);
-            }
-
-            #leandata a {
-                .icon-link(34px, -304px);
-            }
-
-            #gaming a {
-                .icon-link(34px, -338px);
-            }
-
-            #vr a {
-                .icon-link(23px, -372px);
-            }
-
-            #servo a {
-                .icon-link(30px, -395px);
-            }
-
-            #rust a {
-                .icon-link(35px, -425px);
-            }
-
-            #who-innovate-wrapper {
-                .clearfix;
-                display: block;
-                height: @sliderHeight;
-                overflow: hidden;
-                position: relative;
-                width: 100%;
-
-                &.open-who {
-                    #innovate {
-                        transform: translateX(100%);
-                    }
-
-                    #who {
-                        transform: translateX(0%);
-                    }
-                }
-
-                &.open-innovate {
-                    #innovate {
-                        transform: translateX(0%);
-                    }
-
-                    #who {
-                        transform: translateX(-100%);
-                    }
-                }
-            }
-
-            #innovate,
-            #who {
-                display: block;
-                height: 100%;
-                left: 0;
-                position: absolute;
-                top: 0;
-                transition: all 0.55s ease;
-                width: 100%;
-
-                &.open {
-                    .slider-cover {
-                        // no delay when opening
-                        transition: all 0.25s ease-out;
-                        width: 30%;
-
-                        .slider-content p {
-                            .font-size(16px);
-                            // no delay when opening
-                            transition: font-size 0.3s ease-out;
-                        }
-                    }
-
-                    .toggle-buttons {
-                        transform: translateY(-44px);
-                    }
-                }
-            }
-
-            // extra content is off to the right
-            #innovate {
-                transform: translateX(50%);
-
-                .slider-cover {
-                    left: 0;
-                }
-
-                .slider-detail {
-                    background: #fff;
-                    color: @fontDark;
-                    right: 0;
-
-                    &:after {
-                        background-image: url('/media/img/home/new/b/sketchy-gear-green.png');
-                        background-position: left -44px;
-                        opacity: 0.2;
-                    }
-
-                    a {
-                        color: @fontDark;
-                    }
-                }
-
-                .slider-detail-headline {
-                    color: #008b89;
-                }
-
-                .toggle-open {
-                    color: #fff;
-                }
-
-                .toggle-close {
-                    background-position: 0 -504px;
-                }
-            }
-
-            // extra content is off to the left
-            #who {
-                transform: translateX(-50%);
-
-                .slider-cover {
-                    right: 0;
-                }
-
-                .slider-detail {
-                    background-color: #c33b32;
-                    color: #fff;
-                    left: 0;
-
-                    &:after {
-                        background-image: url('/media/img/home/new/b/sketchy-heart-white.png');
-                        background-position: -79px -73px;
-                        opacity: 0.1;
-                    }
-
-                    a {
-                        color: #fff;
-                    }
-                }
-
-                .toggle-open {
-                    color: #c33b32;
-                }
-
-                .toggle-close {
-                    background-position: 0 -460px;
-                }
-            }
-
-            .slider-cover,
-            .slider-detail {
-                height: 100%;
-                position: absolute;
-                top: 0;
-            }
-
-            .slider-cover {
-                // slight delay when closing
-                transition: all 0.25s ease-out 0.1s;
-                width: 50%;
-                // sits above .slider-detail
-                z-index: 2;
-
-                .slider-content {
-                    max-width: @width-phone-wide;
-                }
-            }
-
-            .slider-detail {
-                width: 70%;
-                // sits below .slider-cover
-                z-index: 1;
-
-                .slider-content {
-                    padding: 40px 40px 10px;
-                    max-width: @width-tablet;
-                }
-            }
-
-            .slider-detail-headline {
-                .font-size(32px);
-            }
-
-            .slider-content {
-                margin: 0 auto;
-
-                p {
-                    // slight delay when closing
-                    transition: font-size 0.3s ease-out 0.15s;
-                }
-            }
-        }
-    }
-
-    @media @mq-desktop {
-        .js {
-            .icon-links {
-                width: 40%;
-            }
-
-            .slider-detail-headline {
-                .font-size(38px);
-            }
-
-            .toggle-content {
-                .font-size(30px);
-            }
-        }
     }
 }
 
