--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -1095,6 +1095,11 @@ nav.menu-bar {
     }
 }
 
+// hide lang switcher submit button if JS available
+.js #lang_form_submit {
+    display: none;
+}
+
 .visually-hidden {
     .visually-hidden();
 }
