--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -847,6 +847,11 @@ nav.menu-bar {
     }
 }
 
+// hide lang switcher submit button if JS available
+.js #lang_form_submit {
+    display: none;
+}
+
 /* }}} */
 
 // Don't display the dynamic platform images when js is disabled
