--- a/bedrock/base/templates/base-resp.html
+++ b/bedrock/base/templates/base-resp.html
@@ -164,32 +164,18 @@
       {% javascript 'matchmedia' %}
     <![endif]-->
 
-    {#
-      The logic mess below will be simplified when all pages are refactored
-      to behave well in old IE without page-specific JS.
-    #}
-    {% if force_modern_js != True %}
-      {#
-        Unless specifically requested by current page, hide first-class
-        & page-specific JS from IE 8 and below.
-      #}
-      <!--[if !lte IE 8]><!-->
-    {% endif %}
-    {% block site_js %}
-      {% javascript 'common' %}
-    {% endblock %}
-    {% block js %}{% endblock %}
-    {% if force_modern_js != True %}
-      <!--<![endif]-->
+    {# Serve first-class & page-specified JS to IE 9 and up #}
+    <!--[if !lte IE 8]><!-->
+      {% block site_js %}
+        {% javascript 'common' %}
+      {% endblock %}
+      {% block js %}{% endblock %}
+    <!--<![endif]-->
 
-      {#
-        Give old IE a slimmed down bundle with only jQuery, global, and
-        GTM scripts.
-      #}
-      <!--[if lte IE 8]>
-        {% javascript 'common-oldie' %}
-      <![endif]-->
-    {% endif %}
+    {# Serve minimal JS to IE 8 and below #}
+    <!--[if lte IE 8]>
+      {% javascript 'common-oldie' %}
+    <![endif]-->
 
     {% if settings.DEV %}
       <script src="https://pontoon.mozilla.org/pontoon.js"></script>
