--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -184,6 +184,18 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/susan-chen/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/susan-chen.jpg') }}">
+          <span class="fn" itemprop="name">Susan Chen</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('VP, Business Development') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/schen">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/mary-ellen-muckerman/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mary-ellen-muckerman.jpg') }}">
           <span class="fn" itemprop="name">Mary Ellen Muckerman</span>
