--- a/bedrock/firefox/templates/firefox/all.html
+++ b/bedrock/firefox/templates/firefox/all.html
@@ -62,7 +62,8 @@
     <h1>{{ self.page_title()  }}</h1>
     <h2>{{ self.page_desc() }}</h2>
     <p><a class="sysreq" href="{{ firefox_url(platform, 'sysreq', channel) }}">{{ _('Check the system requirements') }}</a><br />
-    <a class="sysreq" href="{{ firefox_url(platform, 'notes', channel) }}">{{ _('Release notes') }}</a></p>
+    <a class="sysreq" href="{{ firefox_url(platform, 'notes', channel) }}">{{ _('Release notes') }}</a><br />
+    <a class="sysreq" href="https://developer.mozilla.org/docs/Mozilla/Developer_guide/Source_Code">{{ _('Source code') }}</a></p>
   </header>
 
   {{ build_search_box(query, full_builds, test_builds) }}
