--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -263,7 +263,7 @@ ul.download-list {
         list-style: none;
 
         li {
-            display: inline-block;
+            .inline-block();
             margin: @baseLine 0 0;
 
             .button {
